# milagros-datalake

./: .env.example  .gitignore  README.md  pyproject.toml
analytics/: __init__.py  eia.py  financiero.py  geotecnico.py  hidrologico.py  solar.py
catalog/: __init__.py  manager.py
config/: settings.py  sources.yaml
ingestors/: __init__.py  agronet_eva.py  anla_vital.py  base.py  cds_era5.py  chelsa.py  chirps.py  cmip6.py  copernicus_wq.py  corantioquia.py  corine_lc.py  creg.py  dane_censo.py  desinventar.py  dnp_terridata.py  eot_pbot.py  fao.py  gbif_sib.py  gee_dem.py  gee_landsat.py  gee_sentinel1.py  gee_sentinel2.py  global_solar.py  global_wind.py  glofas.py  humboldt.py  hydrosheds.py  ideam_dhime.py  igac_cartografia.py  invias.py  mapbiomas.py  mintic.py  modis.py  nasa_lhasa.py  nasa_power.py  noaa_gsod.py  nrel_nsrdb.py  open_meteo.py  osm.py  persiann.py  (+11 more)
processors/: __init__.py  base.py
processors/gold/: amenazas_naturales.py  balance_hidrico.py  curvas_duracion.py  indicadores_socioeconomicos.py  linea_base_ambiental.py  mercado_despacho.py  perfil_geologico.py  (+3 more)
scripts/: export_consultor.py  export_dashboard.py  export_inversionistas.py  export_regulador.py  ingest_all.py  process_all.py  run_analytics.py  validate.py
tests/: conftest.py  test_base_ingestor.py  test_catalog.py  test_ingestor_cds_era5.py  test_ingestor_chelsa.py  test_ingestor_gbif_sib.py  test_ingestor_gee_dem.py  test_ingestor_gee_sentinel2.py  test_ingestor_hydrosheds.py  test_ingestor_nasa_power.py  test_ingestor_open_meteo.py  test_ingestor_worldclim.py  test_processors.py
(+18 files in other folders)
